tests/reference/asr-test_pow3-79749ed.stderr
style suggestion: Could have used '**' instead of 'pow'
 --> tests/errors/test_pow3.py:6:11
  |
6 |     print(pow(x,a))
  |           ^^^^^^^^ '**' could be used instead

semantic error: Arguments do not match for any generic procedure, pow
 --> tests/errors/test_pow3.py:6:11
  |
6 |     print(pow(x,a))
  |           ^^^^^^^^ 
